--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-beautifulsoup4==4.12.3
-dask==2024.7.1
-neo4j==5.22.0
-pandas==2.0.3
-Requests==2.32.3
-xmltodict==0.13.0
+beautifulsoup4
+dask
+neo4j
+pandas
+Requests
+xmltodict
+mygene
+bioservices
+pubchempy
+biothings_client
+spacy
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
